--- a/css/highlight.css
+++ b/css/highlight.css
@@ -27,7 +27,7 @@ body.useFancyHighlight .activeSearchResultContainer img {
 body.useSimpleHighlight {
   /* 無限スクロールの2ページ目以降は #botstuff で囲まれる */
   #search, #botstuff {
-    a:focus {
+    a:focus-visible {
       outline: 0;
       position: relative;
       display: inline-block;
@@ -35,7 +35,7 @@ body.useSimpleHighlight {
       transition: ease-out 0.1s;
       white-space: nowrap;    
     }
-    a:focus::before {
+    a:focus-visible::before {
       position: absolute;
       right: 100%;
       top: 0;
